--- a/src/pages/book/[slug].astro
+++ b/src/pages/book/[slug].astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '../../layouts/Layout.astro';
 import { fetchGoogleBooksData } from '../../utils/googleBooks';
-import booksData from '../../data/books.json';
+import booksData from '@data/books.json';
 import type { Book } from '../../types/book';
 import { slugify } from '../../utils/slugify';
 
